[tool.poetry]
name = "mario_pytorch"
version = "0.1.0"
description = ""
authors = ["ganariya <ganariya2525@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^1.9.0"
torchvision = "^0.10.0"
matplotlib = "^3.4.3"
pydantic = "^1.8.2"
PyYAML = "^5.4.1"
stable-baselines3 = {extras = ["extra"], version = "^1.1.0"}
torchviz = "^0.0.2"
isort = "^5.9.3"
typer = "^0.4.0"
gym-super-mario-bros = {git = "https://github.com/ganyariya/gym-super-mario-bros"}
llvmlite = "^0.37.0"
ribs = {extras = ["all"], version = "^0.4.0"}
dill = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"
flake8 = "^3.9.2"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://qiita.com/que9/items/7cf9f992b8decb4265c1
# https://blog.hirokiky.org/entry/2019/06/03/202745
[tool.flake8]
max-line-length = 88
extend-ignore = """
E203,
E741,
F401
"""